--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
+    "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "mongoose-sequence": "^6.0.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pdfkit": "^0.16.0"
   }
 }
