--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
@@ -21,7 +22,9 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "mongoose-sequence": "^6.0.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
+    "os": "^0.1.2",
     "pdfkit": "^0.16.0"
   }
 }
