--- a/server/.env
+++ b/server/.env
@@ -1,12 +1,19 @@
-JWT_SECRET=JWT_SECRET_Is_my_secret
+
 
    
     PORT=5000
 
 
 
-EMAIL_USER=maharaju1212@gmail.com
-EMAIL_PASS=xpsz pvum ccij ihmf
+ADMIN_EMAIL=maharaju1212@gmail.com
+ADMIN_EMAIL_PASSWORD=xpsz pvum ccij ihmf
 
 
 BASE_URL=http://localhost:5000
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=Employee_Management
+PORT=5000
+JWT_SECRET=JWT_SECRET_Is_my_secret
