--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "mongoose-sequence": "^6.0.1",
+    "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
     "os": "^0.1.2",
