--- a/server/.env
+++ b/server/.env
@@ -13,7 +13,7 @@ BASE_URL=http://localhost:5000
 
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=M1H1R1J1
 DB_NAME=Employee_Management
 PORT=5000
 JWT_SECRET=JWT_SECRET_Is_my_secret
