--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-pdf-tailwind": "^2.3.0",
     "react-router-dom": "^6.23.1",
